--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ android {
         applicationId "com.android.reverse"
         minSdkVersion 16
         targetSdkVersion 23
+//        ndk {
+//            moduleName "dvmnative"
+//            ldLibs "log"
+//        }
     }
 
     buildTypes {
