--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,31 @@
 apply plugin: 'com.android.application'
 
+
+def generateBuildNumber(){
+    def date = new Date()
+    def formattedDate = date.format("yyyyMMdd")
+    def formattedSeconds = date.format("HHmmss")
+    def formatInt = formattedDate as int;
+    def secondsInt = formattedSeconds as int;
+    return (formatInt + secondsInt) as int
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
-        applicationId "com.android.reverse"
+        applicationId "com.android.updroid"
         minSdkVersion 16
         targetSdkVersion 23
+        versionName "1.0.1"
+        versionCode 3
 //        ndk {
 //            moduleName "dvmnative"
 //            ldLibs "log"
 //        }
+
+        buildConfigField 'int', 'buildNumber', "${generateBuildNumber()}"
     }
 
     buildTypes {
@@ -22,15 +36,11 @@ android {
     }
 }
 
-configurations{
-    provided
-    compile.extendsFrom provided
-}
 
 dependencies {
     provided fileTree(dir: 'libs-provided', include: ['*.jar'])
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.android.support:support-v4:23.1.0'
     compile 'com.google.guava:guava:18.0'
 //    compile files('libs/antlr-3.5.2-complete.jar')
 //    compile files('libs/commons-cli-1.2.jar')
